themes/rhds/assets/css/main.css
html, body {
  margin: 0;
  padding: 0;
}

*, *:after, *:before {
  box-sizing: border-box;
}

[aria-hidden=true] {
  display: none;
}

body {
  color: #222;
  font-family: var(--rh-font-family-body-text, RedHatText, 'Red Hat Text', 'Noto Sans Arabic', 'Noto Sans Hebrew', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans Malayalam', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans Thai', Helvetica, Arial, sans-serif);
  font-size: var(--rh-font-size-body-text-lg, 1.125rem);
  line-height: var(--rh-line-height-body-text, 1.5);
}

a,
a:visited {
  color: var(--rh-color-interactive-blue-darker, #0066cc);
}

a:hover, 
a:focus {
  color: var(--rh-color-interactive-blue-darkest, #004080);
}

:is(h1, h2, h3, h4, h5, h6) {
  font-family: var(--rh-font-family-heading, RedHatDisplay, 'Red Hat Display', 'Noto Sans Arabic', 'Noto Sans Hebrew', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans Malayalam', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans Thai', Helvetica, Arial, sans-serif);
  font-weight: var(--rh-font-weight-heading-medium, 500);
}

h1 {
  font-size: var(--rh-font-size-heading-2xl, 3rem);
}

h2 {
  font-size: var(--rh-font-size-heading-xl, 2.5rem);
}

h3 {
  font-size: var(--rh-font-size-heading-lg, 2.25rem);
}

h4 {
  font-size: var(--rh-font-size-heading-md, 1.75rem);
}

h5 {
  font-size: var(--rh-font-size-heading-sm, 1.5rem);
}

h6 {
  font-size: var(--rh-font-size-heading-xs, 1.25rem);
}

p {
  max-width: 60rem;
  margin-block: 0 var(--rh-space-xl, 24px);
}

img {
  max-width: 100%;
  height: auto;
}

pre {
  padding: var(--rh-space-lg, 16px);
}

header {
  display: flex;
  align-items: center;
  background-color: var(--rh-color-gray-90, #151515);
  color: var(--rh-color-text-primary-on-dark, #ffffff);
  padding: var(--rh-space-md, 8px);
  height: 72px;
}

header .logo {
  margin-inline-start: var(--rh-space-md, 8px);
  height: 100%;
}

header a {
  display: inline-flex;
  align-items: center;
  height: 100%;
}

header :is(img, svg) {
  max-width: 169px;
}


@media screen and (min-width: 768px) {
  header {
    padding: var(--rh-space-md, 8px) var(--rh-space-xl, 24px);
  }

  header .logo {
    margin-inline-start: var(--rh-space-2xl, 32px);
  } 
}

main {
  max-width: 1320px;
  padding: var(--rh-space-lg, 16px) var(--rh-space-lg, 16px) var(--rh-length-5xl, 80px);
}



@media screen and (min-width: 768px) {
  main {
    margin: 0 auto;
    padding: var(--rh-space-2xl, 32px) var(--rh-space-2xl, 32px) var(--rh-length-5xl, 80px);
  }
}

#hero {
  padding-block: var(--rh-space-xl, 32px);
  background-image: url(/images/openshift-desktop-hero.svg);
  background-repeat: no-repeat;
  background-color: var(--rh-color-surface-lighter, #f2f2f2);
}

#hero :is(h1, h2, h3, h4, h5, h6) {
  font-weight: 400;
}

#hero p {
  font-size: var(--rh-font-size-code-lg, 1.125rem);
}

#hero .hero-cta {
  margin-block-start: var(--rh-space-xl, 32px);
}

@media screen and (min-width: 768px) {
  #hero {
    padding-block: var(--rh-length-4xl, 64px);
  }

  #hero .hero-content {
    margin: 0 auto;
    max-width: 1320px;
  }
}

.breadcrumbs {
  display: flex;
  flex-direction: row;
  list-style: none;
  font-size: var(--rh-font-size-body-text-sm, 0.875rem);
  padding: var(--rh-space-lg, 16px) 0;
}

.breadcrumb:not(:last-of-type):after {
  content: url(/images/breadcrumb-spacer.svg);
  width: 11px;
  height: 11px;
  padding: var(--rh-space-md, 8px);
}

.article-tags {
  padding-block-start: var(--rh-space-lg, 16px);
}

.article-tags span {
  font-weight: var(--rh-font-weight-body-text-medium, 500);
}

.article-date,
.article-authors {
  font-weight: var(--rh-font-weight-body-text-medium, 500);
}

.article-authors:before {
  content: '|';
  margin-inline: var(--rh-space-md, 8px);
  font-weight: var(--rh-font-weight-body-text-regular, 400);
}

@media screen and (min-width: 768px) {
  .article-meta {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .article-tags {
    padding-block-start: 0;
  }
}

.surface-light {
  background-color: var(--rh-color-surface-light, #e0e0e0);
}

.surface-lighter {
  background-color: var(--rh-color-surface-lighter, #f2f2f2);
}

.surface-lightest {
  background-color: var(--rh-color-surface-lightest, #ffffff);
}

.surface-light,
.surface-lighter,
.surface-lightest {
  color: var(--rh-color-text-primary-on-light, #151515);
}

.surface-dark {
  background-color: var(--rh-color-surface-dark, #383838);
}

.surface-darker {
  background-color:var(--rh-color-surface-darker, #1f1f1f);
}

.surface-darkest {
  background-color: var(--rh-color-surface-darkest, #151515);
}

.surface-dark,
.surface-darker,
.surface-darkest {
  color: var(--rh-color-text-primary-on-dark, #ffffff);
}

rh-context-provider:is([color-palette="dark"], [color-palette="darker"], [color-palette="darkest"]) a {
  color: var(--rh-color-interactive-blue-lighter, #73bcf7);
}

rh-context-provider:is([color-palette="dark"], [color-palette="darker"], [color-palette="darkest"]) a:hover {
  color: var(--rh-color-interactive-blue-lightest, #bee1f4);
}

.collaborate {
  position: relative;
  padding: var(--rh-length-4xl, 64px);
}

.collaborate .container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.collaborate .cta-group {
  display: flex;
  flex-direction: row;
  gap: var(--rh-space-md, 16px);
}


/* Bug Fixes */
rh-navigation-secondary a[slot="logo"]:visited {
  color: var(--rh-color-text-primary-on-light, #151515);
}

